tests/sksl/errors/ReservedNameVarying.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'varying'
1 error
